struct Item {
  1: string field1,
  2: string field2,
  3: string field3,
  4: string field4,
  5: string field5,
  6: string field6,
  7: string field7,
  8: string field8,
  9: string field9,
  10: string field10,
  11: string field11,
  12: string field12,
  13: string field13,
  14: string field14,
  15: string field15,
  16: string field16,
  17: string field17,
  18: string field18,
  19: string field19,
  20: string field20,
}

struct Transaction {
   1: list<Item> items,
}